<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_more"
    android:visibility="visible"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/pogoda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="16dp"
        android:paddingStart="70dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/data"
        android:textColor="@color/colorW"
        android:textSize="30sp"
        android:paddingLeft="50dp" />

    <TextView
        android:id="@+id/editTextTime"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:paddingStart="50dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:text="@string/time"
        android:textColor="@color/colorW"
        android:textSize="30sp"
        android:paddingLeft="50dp" />

    <FrameLayout
        xmlns:android = "http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>



</LinearLayout>